--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ project(MyProject VERSION 1.0
 
 set(CMAKE_BUILD_TYPE Debug)
 
-add_executable(lab main.cpp Entity.cpp Camera.cpp LevelGenerator.cpp BasicDungeonGenerator.cpp)
+add_executable(lab main.cpp Entity.cpp Camera.cpp BasicDungeonGenerator.cpp Tile.cpp)
 set_property(TARGET lab PROPERTY CXX_STANDARD 14)
 target_link_libraries(lab curses)
 #set_property(TARGET lab PROPERTY CMAKE_CXX_FLAGS_DEBUG "-g")
