started porting rllab to the monarch engine

--- a/lab/CMakeLists.txt
+++ b/lab/CMakeLists.txt
@@ -5,5 +5,7 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(lab BasicDungeonGenerator.cpp Camera.cpp DenseNN.cpp Entity.cpp LevelGenerator.cpp Player.cpp Tile.cpp Vec2.cpp main.cpp)
-target_link_libraries(lab Eigen curses)
+file(GLOB src_files *.cpp)
+add_executable(lab ${src_files})
+target_link_libraries(lab Eigen curses MonarchRelease)
+target_include_directories(lab PRIVATE include)
