fixed eigen build

--- a/ext/CMakeLists.txt
+++ b/ext/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.1)
 
 add_library(Eigen INTERFACE)
-target_link_libraries(Eigen INTERFACE eigen)
+target_include_directories(Eigen INTERFACE eigen)
 
 add_subdirectory(Monarch)
